# xrtcsdk

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/windows/: CMakeLists.txt  main.cpp
examples/windows/resources/themes/default/basic/: basic.xml
examples/windows/src/: basic_form.cpp
xrtc/: CMakeLists.txt  xrtc.cpp  xrtc.h
xrtc/base/: xrtc_global.cpp  xrtc_global.h
